--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="iimage/png" href="./src/assets/images/icons8-campervan-others-32.png" />
+    <link
+      rel="icon"
+      type="iimage/png"
+      href="./src/assets/images/icons8-campervan-others-32.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Campers</title>
   </head>
